<resources>
    <string name="app_name">QuizApp</string>

    <string name="score">Score 0/10</string>
    <string name="question_number"> Question 1/10 </string>
    <string name="question_1">The programming language that has the ability to create new data types is called:</string>
    <string name="question1_A">Overloaded</string>
    <string name="question1_B">Encapsulated</string>
    <string name="question1_C">Reprehensible</string>
    <string name="question1_D">Extensible</string>
    <string name="answer_1">Extensible</string>

    <string name="question_2">Which of the following is the correct identifier?</string>
    <string name="question2_A">$var_name</string>
    <string name="question2_B">VAR_123</string>
    <string name="question2_C">varname@</string>
    <string name="question2_D">None of the above</string>
    <string name="answer_2">VAR_123</string>

    <string name="question_3">Which of the following features must be supported by any programming language to become a pure object -oriented programming language?</string>
    <string name="question3_A">Encapsulation</string>
    <string name="question3_B">Inheritance</string>
    <string name="question3_C">Polymorphism</string>
    <string name="question3_D">All of the above</string>
    <string name="answer_3">All of the above</string>

    <string name="question_4">Which of the following is the correct syntax to read the single character to console in the C++ language?</string>
    <string name="question4_A">Read ch()</string>
    <string name="question4_B">Getline vh()</string>
    <string name="question4_C">cin.get()</string>
    <string name="question4_D">Scanf(ch)</string>
    <string name="answer_4">cin.get()</string>

    <string name="question_5">How many approaches are used for operator overloading?</string>
    <string name="question5_A">1</string>
    <string name="question5_B">2</string>
    <string name="question5_C">3</string>
    <string name="question5_D">4</string>
    <string name="answer_5">3</string>

    <string name="question_6">C++ is a ____ type of language.</string>
    <string name="question6_A">High-level Language</string>
    <string name="question6_B">Low-level Language</string>
    <string name="question6_C">Middle-level Language</string>
    <string name="question6_D">None of the above</string>
    <string name="answer_6">Middle-level Language</string>

    <string name="question_7">Which computer language is the most widely used?</string>
    <string name="question7_A">Swift</string>
    <string name="question7_B">PHP</string>
    <string name="question7_C">Java</string>
    <string name="question7_D">C#</string>
    <string name="answer_7">Java</string>

    <string name="question_8">Which of the following comment syntax is correct to create a single-line comment in the C++ program?</string>
    <string name="question8_A">//Comment</string>
    <string name="question8_B">/Comment/</string>
    <string name="question8_C">Comment//</string>
    <string name="question8_D">//Comment///</string>
    <string name="answer_8">//Comment</string>

    <string name="question_9">  What technology is used to make telephone calls over the internet possible?</string>
    <string name="question9_A">Ethernet</string>
    <string name="question9_B">VoIP</string>
    <string name="question9_C">Bluetooth</string>
    <string name="question9_D">None of the above</string>
    <string name="answer_9">VoIP</string>

    <string name="question_10">Which of the following is the original creator of the C++ language?</string>
    <string name="question10_A">Dennis Ritchie</string>
    <string name="question10_B">Ken Thompson</string>
    <string name="question10_C">Bjarne Stroustrup</string>
    <string name="question10_D">Brian Kernighan</string>
    <string name="answer_10">Bjarne Stroustrup</string>
    <string name="selected_option">Selected Option</string>
    <string name="correct_ans">Correct Ans:</string>
    <string name="correct_answer">Correct Answer</string>
</resources>