<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#00FFFF"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/QuestionNumber"
        android:text="@string/question_number"
        android:layout_marginTop="10dp"
        android:textColor="#e1ad01"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="29sp"

        android:gravity="center_horizontal">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Key"
            android:textColor="#FF6347"
            android:textSize="10sp"
            android:textStyle="bold"
            android:layout_marginTop="1dp"
            android:textAlignment="center"
            android:text="Key of Previous question:"
            android:paddingLeft="10dp"
            android:gravity="center_horizontal">
        </TextView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Select"
            android:textColor="#FF6347"
            android:textSize="10sp"
            android:textStyle="bold"
            android:layout_marginTop="2dp"
            android:textAlignment="center"
            android:text="Selected Option:"
            android:paddingLeft="10dp"
            android:gravity="center_horizontal">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_option"

            android:id="@+id/selectoption"
            android:textAlignment="center"
            android:textColor="#FF6347"
            android:textSize="10sp"
            android:textStyle="bold"
            android:layout_marginTop="2dp"
            android:paddingLeft="10dp"
            android:gravity="center_horizontal">
        </TextView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Correct"
            android:textColor="#FF6347"
            android:textSize="10sp"
            android:textStyle="bold"
            android:layout_marginTop="2dp"
            android:textAlignment="center"
            android:paddingLeft="10dp"
            android:text="@string/correct_ans"

            android:gravity="center_vertical">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/CorrectAnswer"
            android:textColor="#FF6347"
            android:textSize="10sp"
            android:textStyle="bold"
            android:layout_marginTop="2dp"
            android:textAlignment="center"
            android:text="@string/correct_answer"
            android:paddingLeft="10dp"
            android:gravity="center_horizontal">

        </TextView>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#000000"
            android:id="@+id/question"
            android:textStyle="italic"
            android:text="@string/question_1"
            android:textSize="30sp">

        </TextView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/FirstTwoOption"
        android:layout_gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/optionA"
            android:text="@string/question1_A"
            android:background="@drawable/optiondesign"
            android:textColor="#242343"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textStyle="bold"
            android:paddingTop="14dp"
            android:gravity="center_horizontal">

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/optionB"
            android:text="@string/question1_B"
            android:background="@drawable/optiondesign"
            android:layout_marginTop="10dp"
            android:textColor="#242343"
            android:textAlignment="center"
            android:paddingTop="14dp"
            android:textSize="25dp"
            android:textStyle="bold"
            android:gravity="center_horizontal">

        </TextView>




    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RemainingTwoOption"
        android:layout_gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/optionC"
            android:text="@string/question1_C"
            android:background="@drawable/optiondesign"
            android:layout_marginTop="10dp"
            android:textColor="#242343"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:paddingTop="14dp"
            android:gravity="center_horizontal">

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/optionD"
            android:text="@string/question1_D"
            android:background="@drawable/optiondesign"
            android:textColor="#242343"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:paddingTop="14dp"
            android:gravity="center_horizontal">

        </TextView>




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/score"
            android:textStyle="bold"
            android:textColor="#e1ad01"
            android:layout_marginTop="3dp"
            android:text="@string/score"
            android:textSize="20dp"
            android:layout_gravity="end"
            android:padding="10dp"/>


        <ProgressBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ffa384"
            android:layout_gravity="bottom"
            android:id="@+id/progress_bar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:indeterminate="false">

        </ProgressBar>




    </LinearLayout>









</LinearLayout>